# Mutica

./: .gitignore  Cargo.toml  readme.md
examples/: alloc.mu  complex_type.mu  cps.mu  discard.mu  effect.mu  either.mu  factorial.mu  fib.mu  generic.mu  handler.mu  invoke.mu  io.mu  lambda.mu  let.mu  lib_test.mu  list.mu  maybe.mu  num.mu  pair.mu  run_all.py  struct.mu  subtyping.mu  test_error.mu  tree.mu
examples/lib/: list.mu  maybe.mu  sort.mu  string.mu
examples/test_lint/: ambiguous_pattern.mu  parser_error.mu  redeclared_pattern.mu  unused_variables.mu  unused_variables_2.mu  use_before_declaration.mu
mutica-compiler/: Cargo.toml  build.rs
mutica-compiler/src/: lib.rs
mutica-compiler/src/parser/: ast.rs  colorize.rs  grammar.lalrpop  lexer.rs  mod.rs
mutica-compiler/src/util/: mod.rs
mutica-core/: Cargo.toml
mutica-core/src/: lib.rs
mutica-core/src/scheduler/: mod.rs  stack.rs
mutica-core/src/types/: character.rs  character_value.rs  closure.rs  fixpoint.rs  float.rs  float_value.rs  generalize.rs  integer.rs  integer_value.rs  invoke.rs  lazy.rs  list.rs  mod.rs  namespace.rs  neg.rs  opcode.rs  pattern.rs  rot.rs  specialize.rs  tuple.rs  type_bound.rs  type_range.rs  variable.rs
mutica-core/src/util/: allocator.rs  collector.rs  cycle_detector.rs  mod.rs  rootstack.rs  three_valued_logic.rs
mutica-semantic/: Cargo.toml
mutica-semantic/src/: semantic.rs
src/: lib.rs  main.rs
src/parser/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs
src/scheduler/: mod.rs
src/types/: apply.rs  character.rs  character_value.rs  closure.rs  effect.rs  fixpoint.rs  generalize.rs  integer.rs  integer_value.rs  invoke.rs  lazy.rs  list.rs  mod.rs  namespace.rs  opcode.rs  pattern.rs  specialize.rs  tuple.rs  type_bound.rs  variable.rs
src/util/: collector.rs
