[package]
name = "mutica"
description = "Mutica programming language"
license = "MIT"
authors = ["sjrsjz"]
repository = "https://github.com/sjrsjz/Mutica"
categories = ["command-line-utilities", "compilers"]

edition.workspace = true
version.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
mutica-core = { version = "0.1.0", workspace = true }
mutica-compiler = { version = "0.1.0", workspace = true }
mutica-semantic = { version = "0.1.0", workspace = true }

[workspace.dependencies]
mutica-core = { version = "0.1.0", path = "mutica-core" }
mutica-compiler = { version = "0.1.0", path = "mutica-compiler" }
mutica-semantic = { version = "0.1.0", path = "mutica-semantic" }

[[bin]]
name = "mutica"

[workspace]
members = ["mutica-core", "mutica-compiler", "mutica-semantic", "."]
