[package]
name = "mutica"
description = "Mutica programming language"
license = "MIT"
authors = ["sjrsjz"]
repository = "https://github.com/sjrsjz/Mutica"
categories = ["command-line-utilities", "compilers"]

edition.workspace = true
version.workspace = true

[workspace.package]
version = "0.1.7"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
mutica-core = { workspace = true }
mutica-compiler = { workspace = true }
mutica-semantic = { workspace = true }

[workspace.dependencies]
mutica-core = { version = "0.1.7", path = "mutica-core" }
mutica-compiler = { version = "0.1.7", path = "mutica-compiler" }
mutica-semantic = { version = "0.1.7", path = "mutica-semantic" }

[[bin]]
name = "mutica"

[workspace]
members = ["mutica-core", "mutica-compiler", "mutica-semantic", "."]
