[package]
name = "mutica-compiler"
description = "Compiler library for the Mutica programming language"
license = "MIT"
authors = ["sjrsjz"]
repository = "https://github.com/sjrsjz/Mutica"
categories = ["compilers", "parser-implementations", "development-tools"]


version.workspace = true
edition.workspace = true

[dependencies]
ariadne = "0.4.1"
lalrpop-util = "0.22.2"
logos = "0.15.1"
stacksafe = "0.1.4"
mutica-core = { workspace = true }

[build-dependencies]
lalrpop = "0.22.2"

[lib]
path = "src/lib.rs"
