[package]
name = "mutica-core"
description = "Core library for the Mutica programming language"
license = "MIT"
authors = ["sjrsjz"]
repository = "https://github.com/sjrsjz/Mutica"
categories = ["compilers", "parser-implementations", "development-tools"]


version.workspace = true
edition.workspace = true

[dependencies]
rust-arc-gc = "0.2.1"
smallvec = "1.15.1"
stacksafe = "0.1.4"
thiserror = "2.0.17"

[lib]
path = "src/lib.rs"