[package]
name = "mutica-semantic"
description = "Semantic analysis library for the Mutica programming language"
license = "MIT"
authors = ["sjrsjz"]
repository = "https://github.com/sjrsjz/Mutica"
categories = ["compilers", "parser-implementations", "development-tools"]

version.workspace = true
edition.workspace = true

[dependencies]
mutica-core = { version = "0.1.0", workspace = true }
mutica-compiler = { version = "0.1.0", workspace = true }

[lib]
path = "src/lib.rs"
