[package]
name = "mutica-semantic"
description = "Semantic analysis library for the Mutica programming language"
license = "MIT"
authors = ["sjrsjz"]
repository = "https://github.com/sjrsjz/Mutica"
categories = ["compilers", "parser-implementations", "development-tools"]

version.workspace = true
edition.workspace = true

[dependencies]
mutica-core = { workspace = true }
mutica-compiler = { workspace = true }

[lib]
path = "src/lib.rs"
